--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,44 @@
+# 音频输出文件
 static/audio/*.mp3
-cache_*.mp3 
-
 static/audio/*.wav
-cache_*.wav 
+cache_*.mp3
+cache_*.wav
 
+# 系统文件
 .DS_Store
+Thumbs.db
+
+# Python 编译文件
 *.pyc
-*/__pycache__
+__pycache__/
+*.pyo
+*.pyd
+.Python
+
+# 虚拟环境
+venv/
+env/
+ENV/
+.venv
+
+# IDE 文件
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# 日志文件
+*.log
+logs/
+
+# 临时文件
+*.tmp
+*.temp
+.cache/
+
+# 配置文件 (如果包含敏感信息)
+# config/local_settings.py
+
+# 测试覆盖报告
+.coverage
+htmlcov/
